# aspect-cli-issue-760-reproduce

./: BUILD.bazel  MODULE.bazel  go.mod  go.sum
.aspect/cli/: config.yaml
cmd/: BUILD.bazel  main.go
