bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "rules_go", version = "0.50.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

go_deps.gazelle_default_attributes(
    build_file_generation = "clean",
    directives = [
        "gazelle:proto disable",
    ],
)

use_repo(
    go_deps,
    "com_github_adrg_xdg",
    "com_github_azure_azure_sdk_for_go_sdk_azidentity",
    "com_github_azure_azure_sdk_for_go_sdk_storage_azblob",
    "com_github_burntsushi_toml",
    "com_github_cenkalti_backoff",
    "com_github_clickhouse_clickhouse_go_v2",
    "com_github_dustin_go_humanize",
    "com_github_emicklei_proto",
    "com_github_go_stack_stack",
    "com_github_golang_migrate_migrate_v4",
    "com_github_gomicro_postal",
    "com_github_google_gofuzz",
    "com_github_google_uuid",
    "com_github_gorilla_mux",
    "com_github_hablullah_go_hijri",
    "com_github_hashicorp_go_multierror",
    "com_github_hmarr_codeowners",
    "com_github_iancoleman_strcase",
    "com_github_ibm_sarama",
    "com_github_spf13_cobra",
    "com_google_cloud_go",
    "com_google_cloud_go_bigquery",
    "com_google_cloud_go_cloudsqlconn",
    "com_google_cloud_go_compute_metadata",
    "com_google_cloud_go_container",
    "com_google_cloud_go_datastore",
    "com_google_cloud_go_logging",
    "com_google_cloud_go_profiler",
    "com_google_cloud_go_pubsub",
    "com_google_cloud_go_storage",
)
